@@ -44,6 +44,11 @@ namespace Castle.MicroKernel.Lifestyle
 			get { return model; }
 		}
 
+		/// <summary>
+		/// Invoked when the container gets disposed. The container will not call it multiple times in multithreaded environments.
+		/// However it may be called at the same time when some out of band release mechanism is in progress. Resolving those potential
+		/// issues is the task of implementors
+		/// </summary>
 		public abstract void Dispose();
 
 		public virtual void Init(IComponentActivator componentActivator, IKernel kernel, ComponentModel model)
